# pkg/apispec/openapi.yaml
@@ -3585,8 +3585,6 @@ components:
           enum: [allow-all, block-all]
         egress:
           $ref: "#/components/schemas/NetworkEgressPolicy"
-        ingress:
-          $ref: "#/components/schemas/NetworkIngressPolicy"
       required: [mode]
     NetworkEgressPolicy:
       type: object
@@ -3615,17 +3613,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/PortSpec"
-    NetworkIngressPolicy:
-      type: object
-      properties:
-        allowedCidrs:
-          type: array
-          items:
-            type: string
-        deniedCidrs:
-          type: array
-          items:
-            type: string
     PortSpec:
       type: object
       properties:
